--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@
   }
 
   h1 {
-  	text-shadow: 0px 1px 1px #4d4d4d;
+    text-shadow: 0px 1px 1px #4d4d4d;
   	color: #222;
   	font: 80px 'LeagueGothicRegular';
   }
@@ -24,13 +24,20 @@
   	font: 80px 'Museo700';
   }
 
-  ul{
+  ul.nav {
   	float: right;
   }
-  ul li{
+  ul li.nav-list{
   	display:inline;
   }
 
+  dl {
+    display:block;
+  }
+
+  dt {
+    width: 33%;
+  }
   #tour {
   	width: 720px;
   	text-shadow: -1px -1px 1px #fff, 1px 1px 1px #000;
@@ -65,4 +72,19 @@
 
   h4 {
   	margin: 0px;
+  }
+
+  #pricing {
+  }
+
+  .column {
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 30%;
+  }
+
+  li {
+    margin: 0px;
+    padding: 0px;
   }
